--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -55,7 +55,7 @@
             license="EPL"
             name="Java Development Tooling (JDT) for Java8 (BETA)"
             provider="Eclipse"
-            platformFilter="platform.version&gt;=4.3.0"
+            platformFilter="(platform.version&gt;=4.3.0)"
             siteUrl="http://dist.springsource.com/snapshot/TOOLS/java8/e43">
          <iu id="org.eclipse.jdt.java8patch" />
          <iu id="org.eclipse.pde.java8patch" />
