--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -523,6 +523,7 @@
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
 			siteUrl="http://dist.springsource.org/milestone/GRECLIPSE/e4.3">
          <iu id="org.codehaus.groovy.m2eclipse.feature" />
+         <iu id="org.codehaus.groovy.jdt.patch" />
          <icon
                image32="images/groovy_32.png"></icon>
          <overview
