--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -521,7 +521,7 @@
             name="Groovy-Eclipse Configurator for M2Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-			siteUrl="http://dist.springsource.org/milestone/GRECLIPSE/e4.3">
+			siteUrl="http://dist.springsource.org/milestone/GRECLIPSE/e4.3-j8">
          <iu id="org.codehaus.groovy.m2eclipse.feature" />
          <iu id="org.codehaus.groovy.jdt.patch" />
          <icon
