updated p2 repository URL for greclipse m2e connector to use the product distribution repo

--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -325,7 +325,10 @@
             name="Groovy-Eclipse Configurator for M2Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://dist.springsource.org/milestone/GRECLIPSE/e3.7/">
+			siteUrl="http://dist.springsource.com/release/TOOLS/update/e3.7">
+<!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7"> -->
+<!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e3.7"> -->
+<!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e3.7"> -->
          <iu id="org.codehaus.groovy.m2eclipse" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -390,7 +393,10 @@
             name="Groovy-Eclipse Configurator for M2Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://dist.springsource.org/milestone/GRECLIPSE/e4.2/">
+			siteUrl="http://dist.springsource.com/release/TOOLS/update/e3.8">
+<!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8"> -->
+<!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e3.8"> -->
+<!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e3.8"> -->
          <iu id="org.codehaus.groovy.m2eclipse" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -455,7 +461,10 @@
             name="Groovy-Eclipse Configurator for M2Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
-            siteUrl="http://dist.springsource.org/milestone/GRECLIPSE/e4.2/">
+			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.2">
+<!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2"> -->
+<!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.2"> -->
+<!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.2"> -->
          <iu id="org.codehaus.groovy.m2eclipse" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -521,7 +530,10 @@
             name="Groovy-Eclipse Configurator for M2Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-			siteUrl="http://dist.springsource.org/milestone/GRECLIPSE/e4.3-j8">
+			siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.3">
+<!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3"> -->
+<!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.3"> -->
+<!--            siteUrl="http://dist.springsource.com/release/TOOLS/update/e4.3"> -->
          <iu id="org.codehaus.groovy.m2eclipse.feature" />
          <iu id="org.codehaus.groovy.jdt.patch" />
          <icon
